[package]
name = "gitlabjobber"
version = "1.2.0"
edition = "2021"
authors = ["Dyego <dyegomb@gmail.com"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = { version = "1", features = ["full"] }
tokio = { version = "1", default-features = false, features = ["time", "macros", "rt", "rt-multi-thread"] }
futures = "0.3"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
env_logger = "0.10"
configloader = { path = "./configloader"}
mailsender = { path = "./mailsender" }
gitlabapi = { path = "./gitlabapi" }

[dev-dependencies]
env_logger = "0.10"
serde_json = "1.0"

[target.'cfg(all(target_env = "musl"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.5"

[workspace]
members = [
    "gitlabapi",
    "configloader",
    "mailsender"
]

[profile.dev]
opt-level = 0

[profile.release]
codegen-units = 1
# opt-level = 3
opt-level = "z"
lto = "fat"
strip = "symbols"
# strip = true
panic = "abort"
debug = false
debug-assertions = false
overflow-checks = false