[package]
name = "configloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.7"
envy = "0.4"
merge = "0.1"
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
env_logger = "0.10"
lettre = { version = "0.10", features = ["rustls-tls"] }