[package]
name = "configloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = { workspace = true }
envy = { workspace = true }
merge = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
lettre = { workspace = true }

[lints.clippy]
cargo-ignore-publish = "allow"   
