[package]
name = "gitlabapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }

configloader = { path = "../configloader"}

[dev-dependencies]
env_logger = "0.10"