[package]
name = "gitlabapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { workspace = true }
reqwest = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }

configloader = { path = "../configloader"}

[dev-dependencies]
env_logger = "0.10"

[lints.clippy]
cargo-ignore-publish = "allow"   
