[package]
name = "mailsender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = { workspace = true }
merge = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

configloader = { path = "../configloader"}

[dev-dependencies]
env_logger = "0.10"
